// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilePreview should render correctly html files 1`] = `
<div>
  <ProgressWrapper
    loading={false}
  >
    <Iframe
      height="1000px"
      url="/db1/api/v1/files/preview/7/output.html"
      width="100%"
    />
  </ProgressWrapper>
</div>
`;

exports[`FilePreview should render correctly image files 1`] = `
<div>
  <ProgressWrapper
    loading={false}
  >
    <img
      alt="image"
      src="/db1/api/v1/files/download/4/output.png"
    />
  </ProgressWrapper>
</div>
`;

exports[`FilePreview should render correctly svg files 1`] = `
<div>
  <ProgressWrapper
    loading={false}
  >
    <img
      alt="image"
      src="/db1/api/v1/files/download/3/test.svg"
    />
  </ProgressWrapper>
</div>
`;

exports[`FilePreview should render correctly text files 1`] = `
<div>
  <ProgressWrapper
    loading={false}
  >
    <SyntaxHighlighter
      language="python"
      style={
        Object {
          ":not(pre) > code[class*=\\"language-\\"]": Object {
            "background": "#2d2d2d",
            "borderRadius": ".3em",
            "padding": ".1em",
            "whiteSpace": "normal",
          },
          "atrule": Object {
            "color": "#cc99cd",
          },
          "attr-name": Object {
            "color": "#e2777a",
          },
          "attr-value": Object {
            "color": "#7ec699",
          },
          "block-comment": Object {
            "color": "#999",
          },
          "bold": Object {
            "fontWeight": "bold",
          },
          "boolean": Object {
            "color": "#f08d49",
          },
          "builtin": Object {
            "color": "#cc99cd",
          },
          "cdata": Object {
            "color": "#999",
          },
          "char": Object {
            "color": "#7ec699",
          },
          "class-name": Object {
            "color": "#f8c555",
          },
          "code[class*=\\"language-\\"]": Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "#ccc",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          },
          "comment": Object {
            "color": "#999",
          },
          "constant": Object {
            "color": "#f8c555",
          },
          "deleted": Object {
            "color": "#e2777a",
          },
          "doctype": Object {
            "color": "#999",
          },
          "entity": Object {
            "color": "#67cdcc",
            "cursor": "help",
          },
          "function": Object {
            "color": "#f08d49",
          },
          "function-name": Object {
            "color": "#6196cc",
          },
          "important": Object {
            "color": "#cc99cd",
            "fontWeight": "bold",
          },
          "inserted": Object {
            "color": "green",
          },
          "italic": Object {
            "fontStyle": "italic",
          },
          "keyword": Object {
            "color": "#cc99cd",
          },
          "namespace": Object {
            "color": "#e2777a",
          },
          "number": Object {
            "color": "#f08d49",
          },
          "operator": Object {
            "color": "#67cdcc",
          },
          "pre[class*=\\"language-\\"]": Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "#2d2d2d",
            "color": "#ccc",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "margin": ".5em 0",
            "msHyphens": "none",
            "overflow": "auto",
            "padding": "1em",
            "tabSize": "4",
            "textAlign": "left",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          },
          "prolog": Object {
            "color": "#999",
          },
          "property": Object {
            "color": "#f8c555",
          },
          "punctuation": Object {
            "color": "#ccc",
          },
          "regex": Object {
            "color": "#7ec699",
          },
          "selector": Object {
            "color": "#cc99cd",
          },
          "string": Object {
            "color": "#7ec699",
          },
          "symbol": Object {
            "color": "#f8c555",
          },
          "tag": Object {
            "color": "#e2777a",
          },
          "url": Object {
            "color": "#67cdcc",
          },
          "variable": Object {
            "color": "#7ec699",
          },
        }
      }
    >
      Hello World!
    </SyntaxHighlighter>
  </ProgressWrapper>
</div>
`;

exports[`FilePreview should render correctly when file size is too large 1`] = `
<div>
  <ProgressWrapper
    loading={false}
  >
    <Alert
      bsClass="alert"
      bsStyle="warning"
      closeLabel="Close alert"
    >
      File is too large to be previewed. Only files less than 5MB can be previewed.
    </Alert>
  </ProgressWrapper>
</div>
`;

exports[`FilePreview should render correctly when there is error 1`] = `
<div>
  <ProgressWrapper
    loading={false}
  >
    <Alert
      bsClass="alert"
      bsStyle="danger"
      closeLabel="Close alert"
    >
      error
    </Alert>
  </ProgressWrapper>
</div>
`;
